fix card positioning with wrap and calc

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,17 @@ h5 {
         margin: 0;
     }
 }
+
+#comics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+
+    li.comic-card {
+        width: calc(100% / 6 - 2rem);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
